--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <ul>
+        <ul id="menu">
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#contact">contact</a></li>
@@ -28,5 +28,6 @@
             
         </div>
     </section>
+    <script src="src/main.js"></script>
 </body>
 </html>
