Implements contact tab

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/mobile.css">
     <title>berlitz</title>
 </head>
+
 <body>
     <header>
         <ul id="menu">
@@ -24,15 +26,36 @@
         </div>
         <div id="about" class="page">
             <div class="container">
-
-           
                 <img class="outlined" src="assets/me.jpg">
             </div>
         </div>
         <div id="contact" class="page">
-            
+            <ul id="contact-options">
+                <li class="contact-option">
+                    <a target="_blank" href="https://github.com/MarceloBerlitz">
+                        <span class="icon-github">
+                            GitHub
+                        </span>
+                    </a>
+                </li>
+                <li class="contact-option">
+                    <a target="_blank" href="https://www.linkedin.com/in/marcelo-berlitz-b70222112/">
+                        <span class="icon-linkedin">
+                            LinkedIn
+                        </span>
+                    </a>
+                </li>
+                <li class="contact-option">
+                    <a target="_blank" href="https://www.instagram.com/MarceloBerlitz/">
+                        <span class="icon-instagram">
+                            Instagram
+                        </span>
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
     <script src="src/main.js"></script>
 </body>
+
 </html>
