Add about text and fix image position

--- a/index.html
+++ b/index.html
@@ -10,52 +10,62 @@
 </head>
 
 <body>
-    <header>
-        <ul id="menu">
-            <li><a href="#home">home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#contact">contact</a></li>
-        </ul>
-    </header>
-    <section>
-        <div id="home" class="page">
-            <div class="title-container">
-                <h1><span class="marked">marcelo</span> <span class="marked">berlitz</span></h1>
-                <h2><span class="underlined">software</span> <span class="underlined">developer</span></h2>
-            </div>
+<header>
+    <ul id="menu">
+        <li><a href="#home">home</a></li>
+        <li><a href="#about">about</a></li>
+        <li><a href="#contact">contact</a></li>
+    </ul>
+</header>
+<section>
+    <div id="home" class="page">
+        <div class="title-container">
+            <h1><span class="marked">marcelo</span> <span class="marked">berlitz</span></h1>
+            <h2><span class="underlined">software</span> <span class="underlined">developer</span></h2>
         </div>
-        <div id="about" class="page">
-            <div class="container">
-                <img class="outlined" src="assets/me.jpg">
-            </div>
+    </div>
+    <div id="about" class="page">
+        <div class="container">
+            <article id="about-text">
+                <h1>Hello,</h1>
+                <p>My name is Marcelo Berlitz, I'm 24 years old.</p>
+                <p>I like programming, and to play some FPS and racing games. </p>
+                <p>An enthusiastic for new technologies and photography.</p>
+                <p>Addicted to a good coffee.</p>
+                <p>These days I've been working with Angular and Java.</p>
+            </article>
+            <img class="outlined" src="assets/me.jpg" alt="me"/>
         </div>
-        <div id="contact" class="page">
+    </div>
+    <div id="contact" class="page">
+        <div class="container">
             <ul id="contact-options">
                 <li class="contact-option">
                     <a target="_blank" href="https://github.com/MarceloBerlitz">
-                        <span class="icon-github">
-                            GitHub
-                        </span>
+                            <span class="icon-github">
+                                GitHub
+                            </span>
                     </a>
                 </li>
                 <li class="contact-option">
                     <a target="_blank" href="https://www.linkedin.com/in/marcelo-berlitz-b70222112/">
-                        <span class="icon-linkedin">
-                            LinkedIn
-                        </span>
+                            <span class="icon-linkedin">
+                                LinkedIn
+                            </span>
                     </a>
                 </li>
                 <li class="contact-option">
                     <a target="_blank" href="https://www.instagram.com/MarceloBerlitz/">
-                        <span class="icon-instagram">
-                            Instagram
-                        </span>
+                            <span class="icon-instagram">
+                                Instagram
+                            </span>
                     </a>
                 </li>
             </ul>
         </div>
-    </section>
-    <script src="src/main.js"></script>
+    </div>
+</section>
+<script src="src/main.js"></script>
 </body>
 
 </html>
