fix container height

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <article id="about-text">
                 <h1>Hello,</h1>
                 <p>My name is Marcelo Berlitz, I'm 24 years old.</p>
-                <p>I like programming, and to play some FPS and racing games. </p>
+                <p>I like coding, and to play some FPS and racing games.</p>
                 <p>An enthusiastic for new technologies and photography.</p>
                 <p>Addicted to a good coffee.</p>
                 <p>These days I've been working with Angular and Java.</p>
