Add some animations

--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/mobile.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <title>berlitz</title>
 </head>
 
 <body>
 <header>
     <ul id="menu">
-        <li><a href="#home">home</a></li>
-        <li><a href="#about">about</a></li>
-        <li><a href="#contact">contact</a></li>
+        <li><a href="#home"><span>home</span></a></li>
+        <li><a href="#about"><span>about</span></a></li>
+        <li><a href="#contact"><span>contact</span></a></li>
     </ul>
 </header>
 <section>
     <div id="home" class="page">
         <div class="title-container">
             <h1><span class="marked">marcelo</span> <span class="marked">berlitz</span></h1>
-            <h2><span class="underlined">software</span> <span class="underlined">developer</span></h2>
+            <h2><span class="underlined">software</span> <span class="underlined">developer</span><span class="terminal"> ></span></h2>
         </div>
     </div>
     <div id="about" class="page">
