--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>I like coding, and to play some FPS and racing games.</p>
                 <p>An enthusiastic for new technologies and photography.</p>
                 <p>Addicted to a good coffee.</p>
-                <p>These days I've been working with Angular and Java.</p>
+                <p>These days I've been working mostly with React.</p>
             </article>
             <img class="outlined" src="assets/me.jpg" alt="me"/>
         </div>
